RND28-CRUD-Services-(Admin's-APIs)

--- a/Backend/auracontrol/src/main/resources/application.yaml
+++ b/Backend/auracontrol/src/main/resources/application.yaml
@@ -26,4 +26,7 @@ app:
   jwt:
     secret: ${JWT_SECRET}
     expiration: ${JWT_EXPIRATION}
+  admin:
+    email: ${ADMIN_EMAIL:admin@localhost}
+    password: ${ADMIN_PASSWORD:admin}
 
