RND33-Implement-Email-Service-and-Forgot-pass

--- a/Backend/auracontrol/docker-compose.yaml
+++ b/Backend/auracontrol/docker-compose.yaml
@@ -9,6 +9,10 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       ADMIN_EMAIL: ${ADMIN_EMAIL}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      SPRING_MAIL_HOST: ${MAIL_HOST}
+      SPRING_MAIL_PORT: ${MAIL_PORT}
+      SPRING_MAIL_USERNAME: ${MAIL_USERNAME}
+      SPRING_MAIL_PASSWORD: ${MAIL_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
