--- a/Backend/auracontrol/src/main/resources/application.yaml
+++ b/Backend/auracontrol/src/main/resources/application.yaml
@@ -25,12 +25,16 @@ spring:
           writetimeout: 5000
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
   main:
     allow-bean-definition-overriding: true
 
