--- a/Backend/auracontrol/Dockerfile
+++ b/Backend/auracontrol/Dockerfile
@@ -1,8 +1,20 @@
-FROM openjdk:21-jdk-slim
+FROM maven:3.9.9-eclipse-temurin-21-alpine AS build
 WORKDIR /app
 
-COPY target/auracontrol-0.0.1-SNAPSHOT.jar app.jar
+
+COPY pom.xml .
+COPY src ./src
+
+
+RUN mvn clean package -DskipTests
+
+
+FROM eclipse-temurin:21-jre-alpine
+WORKDIR /app
+
+
+COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8081
 
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
