--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres-db:
-    image: postgres:17
+    image: auracontrol-backend:lastest
     container_name: spa-postgres-db
     restart: always
     environment:
