--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -2,9 +2,9 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "main" ] # Hoặc nhánh bạn đang code
+    branches: [ "main" ]
     paths:
-      - 'Backend/auracontrol/**' # Chỉ chạy khi có thay đổi trong code Backend (đỡ tốn resource)
+      - 'Backend/auracontrol/**'
 
 jobs:
   build:
@@ -14,10 +14,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: maven
 
