--- a/Backend/auracontrol/src/main/resources/application.yaml
+++ b/Backend/auracontrol/src/main/resources/application.yaml
@@ -25,7 +25,7 @@ spring:
           writetimeout: 5000
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
