--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -1,44 +1,60 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Images
 
 on:
   push:
     branches: [ "main" ]
-    paths:
-      - 'Backend/auracontrol/**'
 
 jobs:
-  build:
+  detect-changes:
     runs-on: ubuntu-latest
-
+    outputs:
+      backend: ${{ steps.filter.outputs.backend }}
+      frontend: ${{ steps.filter.outputs.frontend }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            backend:
+              - 'Backend/auracontrol/**'
+            frontend:
+              - 'Frontend/**'
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
+  build-backend:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.backend == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
-          cache: maven
-
-          cache-dependency-path: Backend/auracontrol/pom.xml
-
-      - name: Build with Maven
-
-        working-directory: ./Backend/auracontrol
-        run: mvn clean package -DskipTests
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - run: mvn clean package -DskipTests
+        working-directory: Backend/auracontrol
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+      - uses: docker/build-push-action@v5
         with:
-
-          context: ./Backend/auracontrol
+          context: Backend/auracontrol
           push: true
-
           tags: justhoadoan/auracontrol-backend:latest
+
+  build-frontend:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.frontend == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/build-push-action@v5
+        with:
+          context: Frontend
+          push: true
+          tags: justhoadoan/auracontrol-frontend:latest
