--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -6,6 +6,19 @@ server {
     index index.html;
 
     # ======================
+    # API proxy (🔥 QUAN TRỌNG NHẤT)
+    # ======================
+    location /api/ {
+        proxy_pass http://backend:8081/api/;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # ======================
     # SPA routing
     # ======================
     location / {
