--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -6,6 +6,21 @@ server {
     index index.html;
 
     # ======================
+    # Reverse Proxy for Backend API
+    # ======================
+    location /api/ {
+        proxy_pass http://backend:8081/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # ======================
     # SPA routing
     # ======================
     location / {
